apps/privatebin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: privatebin
  namespace: privatebin
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 10G
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  tls:
    - hosts:
        - bin.tmem.de
      secretName: privatebin-tls
  rules:
    - host: bin.tmem.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: privatebin
                port:
                  number: 80
